@@ -130,6 +130,7 @@ to iBATIS 3.x only requires two changes to existing Ibator configurations:</p>
   <li>Added new "or" method to example classes</li>
   <li>Added new "useCompoundPropertyNames" property on &lt;table&gt;</li>
   <li>Enabled a far simpler method for extending the example classes</li>
+  <li>EqualsHashCodePlugin now generates far superior methods</li>
 
 </ul>
 
